@@ -139,20 +139,20 @@ class MySQLProtocolTests(tests.MySQLConnectorTests):
             ({},
              b'\x00\x00\x00\x00\x00\x00\x00@-\x00\x00\x00\x00\x00\x00'
              b'\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00'
-             b'\x00\x00\x00'),
+             b'\x00\x00\x00\x00'),
             ({'charset': 8},
-             b'\x00\x00\x00\x00\x00\x00\x00\x40\x08\x00\x00\x00\x00\x00'
+             b'\x00\x00\x00\x00\x00\x00\x00@\x08\x00\x00\x00\x00\x00\x00'
              b'\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00'
              b'\x00\x00\x00\x00'),
             ({'client_flags': 240141},
              b'\r\xaa\x03\x00\x00\x00\x00@-\x00\x00\x00\x00\x00\x00\x00'
              b'\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00'
-             b'\x00\x00'),
+             b'\x00\x00\x00'),
             ({'charset': 8, 'client_flags': 240141,
               'max_allowed_packet': 2147483648},
-             b'\x0d\xaa\x03\x00\x00\x00\x00\x80\x08\x00\x00\x00\x00\x00'
+             b'\r\xaa\x03\x00\x00\x00\x00\x80\x08\x00\x00\x00\x00\x00'
              b'\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00'
-             b'\x00\x00\x00\x00'),
+             b'\x00\x00\x00\x00\x00'),
         ]
         for kwargs, exp in cases:
             self.assertEqual(exp, self._protocol.make_auth_ssl(**kwargs))
