@@ -16,6 +16,7 @@ v8.0.17
 - WL#12735: Add README.rst and CONTRIBUTING.rst files
 - WL#12227: Indexing array fields
 - WL#12085: Support cursor prepared statements with C extension
+- BUG#29855733: Fix error during connection using charset and collation combination
 - BUG#29833590: Calling execute() should fetch active results
 - BUG#21072758: Support for connection attributes classic
 
